Addition of AI feature